add a route /urls for showing all urls and minor templates and css modifications

--- a/templates/shortener.html
+++ b/templates/shortener.html
@@ -4,7 +4,7 @@
   <div class="Shortener">
   <form action="{{ url_for('shorten_url') }}" method=post>
     <p><input type=text name=text placeholder="Paste a link here to shorten it" size=60>
-       <input type=submit value="Shorten">
+    <p><input type=submit value="Shorten">
   </form>
   </div>
 {% endblock %}
